@@ -1,5 +1,6 @@
 package com.company.command;
 
+import java.util.Arrays;
 import java.util.List;
 
 public interface ICommand {
@@ -11,7 +12,7 @@ public interface ICommand {
     String getHelp();
 
     default List<String> getAliases(){
-        return List.of();
+        return Arrays.asList();
     }
 
 
